# FastApiNeo4J

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  notes.md  pyproject.toml
app/: config.py  main.py
app/data/: graph_connector.py
app/helpers/: data.yml  generate_init_neo4j.py  init_neo4j.txt
app/schemas/: input.py  output.py
app/v0/: advanced.py  friendship.py  kinship.py  people.py
tests/: conftest.py  test_main.py
tests/data/: test_graph_connector.py
tests/v0/: test_advanced.py  test_friendship.py  test_kinship.py  test_people.py
